@@ -1,4 +1,4 @@
-// Copyright 2019 The Chromium Authors. All rights reserved.
+// Copyright 2019 The Chromium Authors
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
@@ -30,7 +30,6 @@ public class TaskInfoTest {
 
     @Before
     public void setUp() {
-        TestBackgroundTask.reset();
         BackgroundTaskSchedulerFactoryInternal.setBackgroundTaskFactory(
                 new TestBackgroundTaskFactory());
     }
@@ -38,14 +37,16 @@ public class TaskInfoTest {
     @Test
     @Feature({"BackgroundTaskScheduler"})
     public void testGeneralFields() {
-        TaskInfo.TimingInfo timingInfo = TaskInfo.OneOffInfo.create()
-                                                 .setWindowEndTimeMs(TEST_END_MS)
-                                                 .setExpiresAfterWindowEndTime(true)
-                                                 .build();
+        TaskInfo.TimingInfo timingInfo =
+                TaskInfo.OneOffInfo.create()
+                        .setWindowEndTimeMs(TEST_END_MS)
+                        .setExpiresAfterWindowEndTime(true)
+                        .build();
         TaskInfo oneOffTask = TaskInfo.createTask(TaskIds.TEST, timingInfo).build();
 
         assertEquals(TaskIds.TEST, oneOffTask.getTaskId());
-        assertEquals(TestBackgroundTask.class,
+        assertEquals(
+                TestBackgroundTask.class,
                 BackgroundTaskSchedulerFactoryInternal.getBackgroundTaskFromTaskId(TaskIds.TEST)
                         .getClass());
     }
@@ -53,10 +54,11 @@ public class TaskInfoTest {
     @Test
     @Feature({"BackgroundTaskScheduler"})
     public void testOneOffExpirationWithinDeadline() {
-        TaskInfo.TimingInfo timingInfo = TaskInfo.OneOffInfo.create()
-                                                 .setWindowEndTimeMs(TEST_END_MS)
-                                                 .setExpiresAfterWindowEndTime(true)
-                                                 .build();
+        TaskInfo.TimingInfo timingInfo =
+                TaskInfo.OneOffInfo.create()
+                        .setWindowEndTimeMs(TEST_END_MS)
+                        .setExpiresAfterWindowEndTime(true)
+                        .build();
         TaskInfo oneOffTask = TaskInfo.createTask(TaskIds.TEST, timingInfo).build();
         CheckTimingInfoVisitor visitor = new CheckTimingInfoVisitor(null, TEST_END_MS, true);
         oneOffTask.getTimingInfo().accept(visitor);
@@ -65,11 +67,12 @@ public class TaskInfoTest {
     @Test
     @Feature({"BackgroundTaskScheduler"})
     public void testOneOffExpirationWithinTimeWindow() {
-        TaskInfo.TimingInfo timingInfo = TaskInfo.OneOffInfo.create()
-                                                 .setWindowStartTimeMs(TEST_START_MS)
-                                                 .setWindowEndTimeMs(TEST_END_MS)
-                                                 .setExpiresAfterWindowEndTime(true)
-                                                 .build();
+        TaskInfo.TimingInfo timingInfo =
+                TaskInfo.OneOffInfo.create()
+                        .setWindowStartTimeMs(TEST_START_MS)
+                        .setWindowEndTimeMs(TEST_END_MS)
+                        .setExpiresAfterWindowEndTime(true)
+                        .build();
         TaskInfo oneOffTask = TaskInfo.createTask(TaskIds.TEST, timingInfo).build();
         CheckTimingInfoVisitor visitor =
                 new CheckTimingInfoVisitor(TEST_START_MS, TEST_END_MS, true);
@@ -79,11 +82,12 @@ public class TaskInfoTest {
     @Test
     @Feature({"BackgroundTaskScheduler"})
     public void testOneOffExpirationWithinZeroTimeWindow() {
-        TaskInfo.TimingInfo timingInfo = TaskInfo.OneOffInfo.create()
-                                                 .setWindowStartTimeMs(TEST_END_MS)
-                                                 .setWindowEndTimeMs(TEST_END_MS)
-                                                 .setExpiresAfterWindowEndTime(true)
-                                                 .build();
+        TaskInfo.TimingInfo timingInfo =
+                TaskInfo.OneOffInfo.create()
+                        .setWindowStartTimeMs(TEST_END_MS)
+                        .setWindowEndTimeMs(TEST_END_MS)
+                        .setExpiresAfterWindowEndTime(true)
+                        .build();
         TaskInfo oneOffTask = TaskInfo.createTask(TaskIds.TEST, timingInfo).build();
         CheckTimingInfoVisitor visitor = new CheckTimingInfoVisitor(TEST_END_MS, TEST_END_MS, true);
         oneOffTask.getTimingInfo().accept(visitor);
@@ -94,17 +98,18 @@ public class TaskInfoTest {
     public void testOneOffNoParamsSet() {
         TaskInfo.TimingInfo timingInfo = TaskInfo.OneOffInfo.create().build();
         TaskInfo oneOffTask = TaskInfo.createTask(TaskIds.TEST, timingInfo).build();
-        CheckTimingInfoVisitor visitor = new CheckTimingInfoVisitor(null, new Long(0), false);
+        CheckTimingInfoVisitor visitor = new CheckTimingInfoVisitor(null, Long.valueOf(0), false);
         oneOffTask.getTimingInfo().accept(visitor);
     }
 
     @Test
     @Feature({"BackgroundTaskScheduler"})
     public void testPeriodicExpirationWithInterval() {
-        TaskInfo.TimingInfo timingInfo = TaskInfo.PeriodicInfo.create()
-                                                 .setIntervalMs(TEST_END_MS)
-                                                 .setExpiresAfterWindowEndTime(true)
-                                                 .build();
+        TaskInfo.TimingInfo timingInfo =
+                TaskInfo.PeriodicInfo.create()
+                        .setIntervalMs(TEST_END_MS)
+                        .setExpiresAfterWindowEndTime(true)
+                        .build();
         TaskInfo periodicTask = TaskInfo.createTask(TaskIds.TEST, timingInfo).build();
         CheckTimingInfoVisitor visitor = new CheckTimingInfoVisitor(TEST_END_MS, null, true);
         periodicTask.getTimingInfo().accept(visitor);
@@ -113,11 +118,12 @@ public class TaskInfoTest {
     @Test
     @Feature({"BackgroundTaskScheduler"})
     public void testPeriodicExpirationWithIntervalAndFlex() {
-        TaskInfo.TimingInfo timingInfo = TaskInfo.PeriodicInfo.create()
-                                                 .setIntervalMs(TEST_END_MS)
-                                                 .setFlexMs(TEST_FLEX_MS)
-                                                 .setExpiresAfterWindowEndTime(true)
-                                                 .build();
+        TaskInfo.TimingInfo timingInfo =
+                TaskInfo.PeriodicInfo.create()
+                        .setIntervalMs(TEST_END_MS)
+                        .setFlexMs(TEST_FLEX_MS)
+                        .setExpiresAfterWindowEndTime(true)
+                        .build();
         TaskInfo periodicTask = TaskInfo.createTask(TaskIds.TEST, timingInfo).build();
         CheckTimingInfoVisitor visitor =
                 new CheckTimingInfoVisitor(TEST_END_MS, TEST_FLEX_MS, true);
@@ -129,18 +135,8 @@ public class TaskInfoTest {
     public void testPeriodicNoParamsSet() {
         TaskInfo.TimingInfo timingInfo = TaskInfo.PeriodicInfo.create().build();
         TaskInfo periodicTask = TaskInfo.createTask(TaskIds.TEST, timingInfo).build();
-        CheckTimingInfoVisitor visitor = new CheckTimingInfoVisitor(new Long(0), null, false);
+        CheckTimingInfoVisitor visitor = new CheckTimingInfoVisitor(Long.valueOf(0), null, false);
         periodicTask.getTimingInfo().accept(visitor);
-    }
-
-    @Test
-    @Feature({"BackgroundTaskScheduler"})
-    public void testExact() {
-        TaskInfo.TimingInfo timingInfo =
-                TaskInfo.ExactInfo.create().setTriggerAtMs(TEST_END_MS).build();
-        TaskInfo exactOneOffTask = TaskInfo.createTask(TaskIds.TEST, timingInfo).build();
-        CheckTimingInfoVisitor visitor = new CheckTimingInfoVisitor(TEST_END_MS, null, false);
-        exactOneOffTask.getTimingInfo().accept(visitor);
     }
 
     private class CheckTimingInfoVisitor implements TaskInfo.TimingInfoVisitor {
@@ -178,11 +174,6 @@ public class TaskInfoTest {
                 assertTrue(periodicInfo.hasFlex());
                 assertEquals(mEndOrFlexMs.longValue(), periodicInfo.getFlexMs());
             }
-        }
-
-        @Override
-        public void visit(TaskInfo.ExactInfo exactInfo) {
-            assertEquals(mStartOrIntervalOrTriggerMs.longValue(), exactInfo.getTriggerAtMs());
         }
     }
 }
